# OoOS

./: .gitignore  Makefile  README.md  build-cross.sh  build_targeted_cc.sh  create_image.sh  env.sh  legal.md
boot/: Makefile  loader.c
boot/uefi/: Makefile  crt_aarch64.c  crt_riscv64.c  crt_x86_64.c  dirent.c  elf_aarch64_efi.lds  elf_riscv64_efi.lds  elf_x86_64_efi.lds  qsort.c  stat.c  stdio.c  stdlib.c  string.c  time.c  uefi.h  unistd.c
common/include/: assert.h  crypt_blowfish.h  crypt_gensalt.h  ctype.h  errno.h  gdtoa.h  libgcc_immintrin.h  ow-crypt.h  stb_image.h  stb_image_resize2.h  stdio.h  stdlib.h  string.h
headergen/: Makefile  describe.hpp  headergen.cpp
img/cfg/: ooos.conf
kernel/: Makefile  acpi.cpp  ahci.cpp  com_amd64.cpp  crt0.S  crti.S  crti.s  crtn.S  crtn.s  descr_amd64.s  direct_text_render.cpp  hda_ahci.cpp  hda_base.cpp  heap_allocator.cpp  idt_amd64.cpp  isr_amd64.s  kb_amd64.cpp  kernel.cpp  keyboard_driver.cpp  kmain.cpp  linker.lds  pci.cpp  rtc.cpp
kernel/arch/: acpi.cpp  apic.cpp  cpu_time.cpp  descr_amd64.S  descr_amd64.s  dt_amd64.S  entro_amd64.cpp  idt_amd64.cpp  isr_amd64.S  isr_amd64.s  keyboard.cpp  keyboard_stdin.cpp  pci.cpp  ps2.cpp  sigtramp_amd64.S  syscall_amd64.s  task_amd64.S  task_amd64.s  tsc_amd64.S  tss.cpp
lib/: Makefile
lib/newlib/libc/sys/ooos/machine/x86_64/: Makefile.am  crt0.S  crti.S  dl_stub.c
modules/: Makefile  module.x86_64-ooos.lds
refs/: README.md  rfc951.txt:Zone.Identifier
syms/: crti-syms.txt  crtn-syms.txt  kernel-syms.txt  libk-syms.txt  ooos-syms.txt
test/: Makefile  test.c
(+1359 files in other folders)
